Revamp of the data base.
Cards and CardEntities are mostly immutable. You have to change them through cardChanged().

The view model keeps the database and the card grouping. Empty slots are allowed in the card grouping and the game needs to implement isValid() to make check that if it is illegal.

The game is responsible for calculating the positions and groups of cards and handling user interactions. The viewmodel updates the in memory structures and the database.

--- a/Scorpion/app/src/main/res/values/strings.xml
+++ b/Scorpion/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Scorpion</string>
+    <string name="game_over">No more moves are available. Start a new game or dismiss the dialog and use undo to continue playing.</string>
+    <string name="new_game">New Game</string>
+    <string name="dismiss">Dismiss</string>
+    <string name="database_inconsistency">An inconsistency in the data base was detected. Start a new game or dismiss and debug. See the Logcat for details</string>
 </resources>
