Added the Scorpion game variants.

--- a/Scorpion/app/src/main/res/values/strings.xml
+++ b/Scorpion/app/src/main/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="game_played">Game Played</string>
     <string name="scorpion">Scorpion</string>
     <string name="available_games">Available Games</string>
+    <string name="move_kitty_when_flipped">Cards in the kitty are flipped in place.</string>
+    <string name="hidden_cards_3_columns">Three columns have face down cards in them.</string>
+    <string name="king_moves_alone">The king moves alone to empty columns.</string>
 </resources>
