Added pyramid game
I revamped the way we handle sizes, because the pyramid game wasn't sizing properly. Got rid of LayoutMeasurments. Now we mostly calculate the width + padding and then get evrything else from there.

I moved the BoxWithConstraints into MainActivity, because I could calculate the real size there.

I removed the cardWidth and cardHeight and just use the aspect ratio

--- a/Scorpion/app/src/main/res/values/strings.xml
+++ b/Scorpion/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="move_kitty_when_flipped">Cards in the kitty are flipped in place.</string>
     <string name="hidden_cards_3_columns">Three columns have face down cards in them.</string>
     <string name="king_moves_alone">The king moves alone to empty columns.</string>
+    <string name="pyramid">Pyramid</string>
 </resources>
