--- a/Scorpion/app/src/main/res/values/strings.xml
+++ b/Scorpion/app/src/main/res/values/strings.xml
@@ -29,7 +29,9 @@
     <string name="hidden_cards_3_columns">Three columns have face down cards in them.</string>
     <string name="king_moves_alone">The king moves alone to empty columns.</string>
     <string name="pyramid">Pyramid</string>
-    <string name="pass_cards_twice">Pass through the deck two times.</string>
+    <string name="deal_cards_twice">Deal the deck twice.</string>
     <string name="clear_pyramid_wins">Win when you clear the cards in the pyramid.</string>
     <string name="play_partial_covers">Play two cards if the lower card is the only one covering the upper card.</string>
+    <string name="play_from_stock">Show cards on top of the deck.</string>
+    <string name="deal">Deal</string>
 </resources>
