--- a/Scorpion/app/src/main/res/values/strings.xml
+++ b/Scorpion/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="play_partial_covers">Play two cards if the lower card is the only one covering the upper card.</string>
     <string name="play_from_stock">Show cards on top of the deck.</string>
     <string name="deal">Deal</string>
+    <string name="cheat_play_on_covered">Cheat by playing on a covered card.</string>
 </resources>
